Allows sliding tree header to expand vertically without scrollbar as the size of crumbs text increases. Fixes broken load spinner.

--- a/src/app/stylesheets/widgets/slidingtree.scss
+++ b/src/app/stylesheets/widgets/slidingtree.scss
@@ -12,7 +12,6 @@
     border-bottom: none;
     padding: 10px 5px;
     overflow: auto;
-    height: 20px;
     
     .currentCrumb{ color: $tree-current-breadcrumb_color; }
     .crumb { color: $tree-breadcrumb_color; }
